# dqx

./: .coderabbit.yaml  .coverage  .cz.toml  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  AGENTS.md  CHANGELOG.md  FINAL_SUMMARY.md  LICENSE  README.md  TEST_FAILURE_ANALYSIS.md  coverage.json  coverage_baseline.txt  example_builder_usage.py  fix_tests.py  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  tunables_ref.md  zensical.toml
.clinerules/: 02-foundational-rules.md  04-coding-standard.md  coding_rules.md  design.md  new_rules.md
.clinerules.example/: 01-project-context.md  07-version-control.md
.github/: dependabot.yml  quality.sh  release-drafter.yml  settings.yml
.opencode/: opencode.jsonc
docs/: api-reference.md  changelog.md  ci-cd-setup.md  commit_validation_troubleshooting.md  dataset_validation_guide.md  design.md  dialect_implementation_summary.md  dqguard-to-dqx-comparison.md  github-cicd-operations-guide.md  github-cicd-setup-guide.md  graph_improvement_plan.md  index.md  installation.md  plugin_system.md  pre-commit-troubleshooting.md  quick_reference.md  quickstart.md  symbol_collection_guide.md  user-guide.md  visitor_pattern.md  workflow_example.md
examples/: analysis_report_with_symbols_demo.py  batch_analysis_demo.py  bigquery_dialect_demo.py  clone_specs_example.py  count_values_demo.py  data_pyarrow_demo.py  display_demo.py  display_pyarrow_integration_demo.py  duckdb_query_optimization_demo.py  evaluation_failure_demo.py  execution_id_demo.py  extended_metric_performance_demo.py  is_between_demo.py  metadata_demo.py  metric_trace_demo.py  metrics_by_execution_id_demo.py  parent_child_dataset_validation_demo.py  plugin_demo.py  result_collection_demo.py  rich_logging_demo.py  simple_symbols_pyarrow_demo.py  sql_formatting_demo.py  suite_cache_and_critical_demo.py  suite_symbol_collection_demo.py  symbol_collection_demo.py  symbols_pyarrow_demo.py  table_display_demo.py  unused_symbol_validator_demo.py
memory-bank/: activeContext.md  elements-of-style-summary.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
pr-10/: index.html  sitemap.xml
pr-101/: search.json
pr-108/: 404.html  sitemap.xml
pr-11/: index.html
pr-12/: index.html
pr-13/: index.html  sitemap.xml
pr-14/: index.html
pr-15/: index.html
pr-16/: index.html
pr-17/: index.html  objects.inv
pr-18/: index.html
pr-19/: index.html  sitemap.xml
pr-20/: index.html  sitemap.xml
pr-21/: index.html
pr-22/: 404.html  index.html
pr-23/: index.html  sitemap.xml
pr-24/: index.html
pr-25/: index.html  sitemap.xml
pr-26/: index.html
pr-27/: index.html  sitemap.xml
pr-28/: index.html
pr-29/: 404.html  index.html  sitemap.xml
pr-30/: index.html  sitemap.xml
pr-31/: index.html  sitemap.xml
pr-32/: index.html  sitemap.xml
pr-33/: index.html  sitemap.xml
pr-34/: index.html  sitemap.xml
pr-35/: index.html
pr-36/: index.html  sitemap.xml
pr-37/: index.html  sitemap.xml
pr-38/: index.html
pr-39/: index.html
pr-41/: index.html  sitemap.xml
pr-42/: index.html
pr-43/: index.html  sitemap.xml
pr-44/: index.html
pr-45/: index.html
pr-46/: index.html
pr-47/: index.html
pr-48/: index.html
pr-49/: index.html
pr-50/: index.html
pr-51/: index.html  sitemap.xml
pr-52/: index.html
pr-53/: index.html
pr-54/: 404.html  index.html  sitemap.xml
pr-55/: index.html  sitemap.xml
pr-56/: index.html
pr-57/: index.html
pr-58/: index.html  sitemap.xml
pr-59/: index.html
pr-60/: index.html
pr-61/: index.html
pr-62/: index.html
pr-63/: index.html  sitemap.xml
pr-64/: index.html  sitemap.xml
pr-65/: index.html  sitemap.xml
pr-66/: index.html
pr-67/: index.html
pr-68/: index.html  sitemap.xml
pr-69/: index.html
pr-70/: index.html  sitemap.xml
pr-71/: index.html
pr-72/: index.html
pr-73/: index.html
pr-74/: index.html  sitemap.xml
pr-75/: index.html
pr-76/: index.html
pr-77/: index.html  sitemap.xml
pr-78/: index.html  sitemap.xml
pr-79/: index.html
pr-80/: 404.html  index.html
pr-81/: index.html  sitemap.xml
pr-82/: index.html
pr-83/: index.html
pr-84/: index.html  sitemap.xml
pr-85/: index.html
pr-86/: index.html  sitemap.xml
pr-87/: index.html  sitemap.xml
pr-88/: 404.html  index.html  search.json  sitemap.xml
pr-89/: search.json
pr-90/: 404.html  index.html  search.json
pr-91/: 404.html  index.html  search.json
pr-94/: search.json
pr-95/: search.json
pr-99/: index.html
scripts/: __init__.py  commands.py  fix_remaining_tests.py  update_metric_build_calls.py  update_tests_for_lag_refactor.py
stylesheets/: extra.css
tests/: conftest.py  test_analysis_report_symbols.py  test_analyzer.py  test_analyzer_all_symbols_in_report.py  test_analyzer_batch.py  test_analyzer_batch_optimization.py  test_analyzer_coverage.py  test_analyzer_coverage_batch.py  test_analyzer_lag_unique_symbols.py  test_analyzer_validate_value.py  test_api.bak  test_api.py  test_api_count_values.py  test_api_coverage.py  test_api_dql.py  test_api_dql_tolerance_integration.py  test_api_dql_tunables.py  test_api_eval_error_handling.py  test_cache.py  (+127 more)
(+1436 files in other folders)
