[project]
name = "dqx"
version = "0.2.0"
description = "Data Quality eXcellence"
readme = "README.md"
authors = [{ name = "Nam Pham", email = "phamducnam@gmail.com" }]
requires-python = ">=3.11,<=3.12"
dependencies = [
    "datasketches>=5.2.0",
    "duckdb>=1.3.2",
    "msgpack>=1.1.1",
    "numpy>=2.3.2",
    "pyarrow>=21.0.0",
    "returns>=0.26.0",
    "sqlalchemy>=2.0.43",
    "sympy>=1.14.0",
    "toolz>=1.0.0",
]

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "faker>=37.5.3",
    "mypy>=1.17.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=6.2.1",
    "pytest-randomly>=3.16.0",
    "rich>=14.1.0",
    "ruff>=0.12.10",
]

[tool.ruff]
target-version = "py311"
line-length = 120
indent-width = 4

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = [
    "S101",    # asserts allowed in tests...
    "PLR2004", # Magic numbers allowed in tests
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
major_version_zero = true

[tool.mypy]
plugins = ["returns.contrib.mypy.returns_plugin"]
python_version = "3.11"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["msgpack.*", "datasketches.*", "pyarrow.*", "sympy.*", "toolz.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = [
    "demo: marks tests as demonstration tests (run with -s to see output)"
]
