[project]
name = "dqlib"
version = "0.5.20"
description = "Data Quality eXcellence"
readme = "README.md"
authors = [{ name = "Nam Pham", email = "phamducnam@gmail.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "duckdb>=1.4.4",
    "msgpack>=1.1.2",
    "pyarrow>=23.0.1",
    "pyyaml>=6.0.3",
    "returns>=0.26.0",
    "rich>=14.3.3",
    "sqlalchemy>=2.0.47,<2.1",
    "sqlparse>=0.5.5",
    "sympy>=1.14.0",
]


[build-system]
requires = ["uv_build>=0.9.5,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "dqx"

[dependency-groups]
dev = [
    "commitizen>=4.13.9",
    "faker>=40.5.1",
    "freezegun>=1.5.5",
    "gitchangelog>=3.0.4",
    "mkdocs>=1.6.1",
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "mkdocs-git-revision-date-localized-plugin>=1.5.1",
    "mkdocs-include-markdown-plugin>=7.2.1",
    "mkdocs-material>=9.7.3",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocstrings>=1.0.3",
    "mkdocstrings-python>=2.0.3",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-randomly>=4.0.1",
    "pytest-env>=1.5.0,<2.0",
    "ruff>=0.15.4",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.ruff]
target-version = "py311"
line-length = 120
indent-width = 4

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = [
    "S101",    # asserts allowed in tests...
    "PLR2004", # Magic numbers allowed in tests
]

[tool.mypy]
plugins = ["returns.contrib.mypy.returns_plugin"]
python_version = "3.11"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["msgpack.*", "pyarrow.*", "sympy.*", "sqlparse.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = [
    "demo: marks tests as demonstration tests (run with -s to see output)"
]
env = [
    "TERM=xterm",
    "PYARROW_IGNORE_TIMEZONE=1",
]

[tool.coverage.run]
relative_files = true
